# dnsnfset

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  dnsnfset.service  rules.conf  wrapper.h
src/: lib.rs  main.rs  nft.rs  nftables.rs  rule.rs  socks.rs
