[package]
name = "dnsnfset"
version = "0.2.0"
authors = ["sorz <me@sorz.org>"]
edition = "2018"

[dependencies]
libc = "0.2"
log = "0.4"
env_logger = "0.9"
clap = "2.33"
mnl = "0.2.0"
dns-parser = "0.8"
protobuf = "2.18"
fstrm = { git = "https://github.com/sorz/rust-fstrm/", rev = "5416fa0" }

[build-dependencies]
bindgen = "0.58"
protobuf-codegen-pure = "2.18"
